--- a/src/assets/scss/common/_general.scss
+++ b/src/assets/scss/common/_general.scss
@@ -121,6 +121,38 @@ section {
   margin-right: 3rem !important;
 }
 
+.me-1 {
+  margin-inline-end: 0.25rem !important;
+}
+.me-2 {
+  margin-inline-end: 0.5rem !important;
+}
+.me-3 {
+  margin-inline-end: 1rem !important;
+}
+.me-4 {
+  margin-inline-end: 1.5rem !important;
+}
+.me-5 {
+  margin-inline-end: 3rem !important;
+}
+
+.ms-1 {
+  margin-inline-start: 0.25rem !important;
+}
+.ms-2 {
+  margin-inline-start: 0.5rem !important;
+}
+.ms-3 {
+  margin-inline-start: 1rem !important;
+}
+.ms-4 {
+  margin-inline-start: 1.5rem !important;
+}
+.ms-5 {
+  margin-inline-start: 3rem !important;
+}
+
 .psl-1 {
   padding-left: 0.25rem !important;
 }
