--- a/src/assets/scss/common/_rtl.scss
+++ b/src/assets/scss/common/_rtl.scss
@@ -269,6 +269,18 @@
     padding-right: unset !important;
   }
 
+  @for $i from -25 through 25 {
+    .m-l-#{$i * 5} {
+      margin-right: #{$i * 5}px !important;
+      margin-left: unset !important;
+    }
+
+    .m-r-#{$i * 5} {
+      margin-left: #{$i * 5}px !important;
+      margin-right: unset !important;
+    }
+  }
+
   &.side-closed {
     &.side-closed-hover {
       section.content {
